--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,6 @@
 @import "partials/_header.scss";
 @import "partials/_main.scss";
 
+//googlefont
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,400&display=swap')
+
