--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -19,11 +19,17 @@
   text-align: center;
   li {
     display: inline-block;
-    font-size: 25px;
-    a{
-     color: #000;
-     text-decoration: none;
+    font-size: 50px;
+    margin: 25px 0px;
+    padding: 25px;
+    &:hover{
+      background-color: #b3e5fc;
     }
+    a{
+      color: #000;
+      text-decoration: none;
+     }
+    } 
   }
-}
+
 
