--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -12,7 +12,7 @@
         }
         .box_type{
             display: flex;
-            justify-content: space-around;
+            justify-content: flex-start;
             flex-wrap: wrap;
             margin: 20px 100px;
             .box_pasta{
