--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -4,21 +4,22 @@
     background-image: url(/images/fondo-pag-speciali.jpg);
     //box_type
     .wrapper_img{
-        width: 80%;
+        width: 90%;
         margin: auto;
         h2 {
             margin: 20px 0;
             color: #002d73;
+            text-align: center;
         }
         .box_type{
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-around;
             flex-wrap: wrap;
-            margin: 20px 100px;
+            
             .box_pasta{
                 width: calc(100% / 4);
                 height: 250px;
-                margin: 20px;
+                margin: 10px;
                 .img_pasta{
                     width: 100%;
                     height: 100%;
