--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,10 +67,49 @@
   width: calc(100% / 4);
   height: 250px;
   margin: 10px;
+  position: relative;
 }
 
 .big_container .wrapper_img .box_type .box_pasta .img_pasta {
   width: 100%;
   height: 100%;
+}
+
+.big_container .wrapper_img .box_type .box_pasta .overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.big_container .wrapper_img .box_type .box_pasta .overlay a {
+  text-decoration: none;
+  text-align: center;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.big_container .wrapper_img .box_type .box_pasta .overlay img {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.big_container .wrapper_img .box_type .box_pasta:hover .overlay {
+  display: block;
 }
 
