--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -36,7 +36,7 @@
                     left: 0;
                     right: 0;
                     bottom: 0;
-                    background-color: rgba(0,0,0,0.5);
+                    background-color: rgba(74, 102, 128,0.5);
                     z-index: 1;
                     cursor: pointer;
                     // link layover
