--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,7 @@
 @import "partials/_common.scss";
 @import "partials/_header.scss";
 @import "partials/_main.scss";
+@import "partials/sign_product.scss";
 
 //googlefont
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,400&display=swap')
